--- a/rag-pdf.ipynb
+++ b/rag-pdf.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "27b89c03",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Максим Муравьёв\\Desktop\\Нейро интенсив\\TG_bot_fresh\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import chromadb\n",
     "from chromadb.utils import embedding_functions\n",
@@ -170,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Запуск главной функции обработки документов.\n",
+    "# Запуск главной функции обработки всех .pdf документов в папке /data.\n",
     "\n",
     "process_and_add_documents(collection, \"./data\")"
    ]
@@ -412,18 +403,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "e78a7b67",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6d93b939-3eca-4ef3-bb35-15bca86e40e1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Определяем сессию (новый пользователь или нет)\n",
     "\n",
@@ -450,31 +433,10 @@
    "execution_count": null,
    "id": "01b1512e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⛔ Останавливаю старый polling...\n",
-      "⚡ Event loop уже запущен, создаю задачу...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:aiogram.dispatcher:Start polling\n",
-      "INFO:aiogram.dispatcher:Run polling for bot @ZeBrains_condei_expertbot id=7925851008 - 'D&D_expert'\n",
-      "ERROR:aiogram.dispatcher:Failed to fetch updates - TelegramConflictError: Telegram server says - Conflict: terminated by other getUpdates request; make sure that only one bot instance is running\n",
-      "WARNING:aiogram.dispatcher:Sleep for 1.000000 seconds and try again... (tryings = 0, bot id = 7925851008)\n",
-      "ERROR:aiogram.dispatcher:Failed to fetch updates - TelegramConflictError: Telegram server says - Conflict: terminated by other getUpdates request; make sure that only one bot instance is running\n",
-      "WARNING:aiogram.dispatcher:Sleep for 1.433898 seconds and try again... (tryings = 1, bot id = 7925851008)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ======= Подключаем ТГ-бота ========\n",
-    "TOKEN='7925851008:AAFi-4yVUdhGwriqQyLfcLbCK4bnlCuDEfs'\n",
+    "TOKEN='*'\n",
     "logging.basicConfig(level=logging.INFO)\n",
     "bot = Bot(TOKEN)\n",
     "dp = Dispatcher()\n",
