--- a/rag-pdf.ipynb
+++ b/rag-pdf.ipynb
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "3b257d04",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
     "\n",
     "    # Создаём отдельную базу запросов, основанную на истории и последнем запросе пользователя. Шаблон.    \n",
     "    contextualize_q_system_prompt = (\n",
-    "        \"Дано: история чата и последний вопрос пользователя, который может ссылаться на контекст из истории. Сформулируй самодостаточный (standalone) вопрос, не меняя названий, который будет понятен без истории чата. Не нужно отвечать на вопрос, только переформулируй его при необходимости. Если переформулировка не требуется — просто верни его как есть.\"\n",
+    "        \"Дано: история чата и последний вопрос пользователя, который может ссылаться на контекст из истории. Сформулируй самодостаточный (standalone) вопрос, не меняя названий и оставляя daici, который будет понятен без истории чата. Не нужно отвечать на вопрос, только переформулируй его при необходимости. Если переформулировка не требуется — просто верни его как есть.\"\n",
     "    )    \n",
     "    payload = {\n",
     "    \"messages\": [\n",
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "c389524c",
    "metadata": {},
    "outputs": [],
@@ -326,7 +326,7 @@
     "# Получаем промпт с историей общения. \n",
     "\n",
     "def get_prompt(context, conversation_history, query):    \n",
-    "    prompt = f\"\"\"Используй контекст из документа и истории разговора чтобы дать развёрнутый ответ, не меняя названий. Если контекста из документа не релевантный, используй только историю разговора. Если контекст из документа не релевантный и история разговора отсутствует, напиши: Недостаточно информации. Пожалуйста, уточните вопрос.\n",
+    "    prompt = f\"\"\"Используй контекст из документа и истории разговора чтобы дать развёрнутый ответ, не меняя названий и оставляя daici. Если контекста из документа не релевантный, используй только историю разговора. Если контекст из документа не релевантный и история разговора отсутствует, напиши: Недостаточно информации. Пожалуйста, уточните вопрос.\n",
     "    Контекст из документа:\n",
     "    {context}\n",
     "    История разговора:\n",
